# wechat-agent-sdk

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: acp_bot.py  builder_bot.py  echo_bot.py  multi_bot.py  openai_bot.py  transport_demo.py
src/wechat_agent_sdk/: __init__.py  agent.py  middleware.py  transport.py  types.py
src/wechat_agent_sdk/account/: bot_manager.py  manager.py  redis_storage.py  sqlite_storage.py  storage.py
src/wechat_agent_sdk/acp/: adapter.py
src/wechat_agent_sdk/api/: auth.py  client.py  types.py
src/wechat_agent_sdk/media/: cdn.py  crypto.py
src/wechat_agent_sdk/messaging/: monitor.py  process.py  send.py
src/wechat_agent_sdk/utils/: markdown.py
tests/: test_acp_streaming.py  test_api_client.py  test_basic.py  test_bot.py  test_bot_manager.py  test_cdn.py  test_crypto.py  test_middleware.py  test_monitor.py  test_sqlite_storage.py  test_storage.py  test_transport.py
