[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wechat-agent-sdk"
version = "0.1.2"
description = "WeChat AI Agent SDK with ACP (Agent Client Protocol) support"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AIhubmix" },
]
keywords = ["wechat", "weixin", "agent", "acp", "ai", "chatbot", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
qr = ["qrcode[pil]>=7.0"]
acp = ["agent-client-protocol>=0.8"]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/AIhubmix/wechat-agent-sdk"
Repository = "https://github.com/AIhubmix/wechat-agent-sdk"
Issues = "https://github.com/AIhubmix/wechat-agent-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wechat_agent_sdk"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
